# govee_collector

./: Cargo.toml  README.md  build.rs
proto/: service.proto
src/: collector.rs  device_database.rs  main.rs  server.rs
src/collector/: govee_h5075.rs
src/server/: stream_device_data.rs  utils.rs
