[package]
name = "govee_collector"
description = "Microservice for collecting and processing data from Govee bluetooth hygrometers."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.9"
futures = "0.3.17"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.30"
tonic = "0.5"
prost = "0.8"
dirs = "2.0"
structopt = "0.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"

[build-dependencies]
tonic-build = "0.5"
